pop-up responsiveness(Age -estimation , login)

--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -228,6 +228,9 @@ margin-left:15px;
 
 
 @media only screen and (min-width: 200px) and (max-width: 900px) {
+#main-content{
+height:100%;
+}
 
 #footer{
 	 justify-content: space-between;
