--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -303,7 +303,7 @@ display: none;
                         </div>
 
                         <div class="hero-btns">
-                            <a href="{% url 'signup' %}" class="boxed-btn">Join US</a>
+                            <a href="{% url 'signup' %}" class="boxed-btn">Join Us</a>
 							<a class="boxed-btn" id="login-big" href="{% url 'login' %}" style="font-size: 20px;"> Log In </a>
 
                         </div>
