--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -812,7 +812,7 @@ select {
 
 	{% endif %}
 
-    <input type="submit" id="LogIN" value="Join US" style="width: 80%;" onclick="return validateCheckbox();">
+    <input type="submit" id="LogIN" value="Join Us" style="width: 80%;" onclick="return validateCheckbox();">
     <br><br>
     <label>Already have an account? <a href="{% url 'login' %}" class="alt-link">Log in</a></label>
 </form>
