--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -155,10 +155,11 @@ height:auto
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
 
-	margin-right:15%;
+	margin-right:5%;
 	height:auto;
 
 }
+
 
 .form-container {
      background-color: transparent;
@@ -537,6 +538,8 @@ margin-left:5%;}
 .input-pair input{
 margin-left:0%;
 }
+#username.input-box , #pass.input-box{
+font-size:0.9rem;}
 /*.input-box{
  width:-webkit-fill-available;
 
