--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -35,7 +35,10 @@
 
 	<style>
 
-
+site-logo img {
+    width: 200px;
+    height: 100px;
+}
 
 		.games{
 			color: #fff;
@@ -264,7 +267,7 @@ display: none;
                     <!-- logo -->
                     <div class="site-logo">
                         <a href="{% url 'index' %}">
-                            <img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+                            <img src="{% static 'img/Games/GameGeek.png' %}" alt="logo"  style="height: 100px;">
                         </a>
                     </div>
 
