--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -327,7 +327,7 @@ padding: 10px;
 
 .main-menu{
 	margin-left: 20px;
-	margin top: 15px;
+	margin-top: 15px;
 	}
 
 
@@ -452,8 +452,9 @@ padding: 10px;
                                     }
                                 },
                                 error: function(xhr, status, error) {
-                                    document.getElementById("errorPopUp").style.display = "block";
-                                    console.error('Error:', error);
+                                    window.location.href = '/error/';
+									console.error('Error:', error);
+                                    document.getElementsByTagName("body")[0].style.display = "none";
                                 }
                             });
                         
