--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -289,7 +289,8 @@ body img{
 										}
 									},
 									error: function(xhr, status, error) {
-										document.getElementById("errorPopUp").style.display = "block";
+										window.location.href = '/error/';
+                                        document.getElementsByTagName("body")[0].style.display = "none";
 										console.error('Error:', error);
 									}
 								});
