--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -149,7 +149,7 @@ padding: 10px;
 
 .main-menu{
 	margin-left: 20px;
-	margin top: 15px;
+	margin-top: 15px;
 	}
 
 
@@ -272,8 +272,9 @@ padding: 10px;
 											}
 										},
 										error: function(xhr, status, error) {
-											document.getElementById("errorPopUp").style.display = "block";
+											window.location.href = '/error/';
 											console.error('Error:', error);
+                                            document.getElementsByTagName("body")[0].style.display = "none";
 										}
 									});
 								});
