--- a/FrontEnd/templates/error.html
+++ b/FrontEnd/templates/error.html
@@ -53,7 +53,7 @@ body {
 
 .msg {
     font-family: 'Poppins', sans-serif;
-    font-size: 2.1rem;
+    font-size: 1.9rem;
     position:absolute;
     font-weight: 701;
     left: 16%;
@@ -68,6 +68,20 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 900px) {
+.err2{
+    left: 76%;
+    top: 11%;
+}
+.far{
+    left: 35%;
+    top: 16%;
+}
+.err{
+    left: 2%;
+}
 }
 
     </style>
