--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -577,7 +577,9 @@ font-size:0.9rem;}
 						updateSecurityQuestions(response);
 						localStorage.setItem('questions', 'response');
 
-						 document.getElementById('securityQuestion').style.width = '98%';
+						 document.getElementById('securityQuestion').style.width = '75%';
+						 document.getElementById('securityQuestion').style.marginRight = '40%';
+
 
 					}
 						//alert(response.join("\n"));
